--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,9 +1,10 @@
 html {
   font-size: 10px;
-  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
-  background-size: cover;
+  /*background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;*/
 }
 body,html {
+  background: url(background/goku.jpg) bottom center;
+  background-size: cover;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
